[tool.poetry]
name = "modeltools"
version = "0.2.4"
description = ""
authors = ["Juan Ramírez <juanseraar@hotmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
numpy = "^1.23.3"


[tool.poetry.dev-dependencies]
pytest = "^7.1.3"
pandas = "^1.5.0"
Sphinx = "^5.2.3"
[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tools.pytest.ini_options]
addopts = "--doctest-modules"