[tool.poetry]
name = "modeltools"
version = "1.0.0"
description = "Paquete de pruebas del curso de MLOps de la SPEGC"
authors = ["Juan Ramírez <juanseraar@hotmail.com>"]

[tool.poetry.dependencies]
python = "^3.10"
numpy = "^1.23.3"

[tool.poetry.dev-dependencies]
pytest = "^7.1.3"
pandas = "^1.5.0"
Sphinx = "^5.2.3"
pytest-cov = "^4.0.0"
black = "^22.10.0"
pylint = "^2.15.4"
pre-commit = "^2.20.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.pytest.ini_options]
addopts = "--doctest-modules"